<resources>

    <string name="app_name">Pizza Kiosk</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">PizzaKiosk</string>
    <string name="welcome">Welcome to the Pizza Kiosk!</string>
    <string name="enterUserNamehint">Enter your username</string>
    <string name="new_user">New user</string>
    <string name="username">Username</string>
    <string name="name">Name</string>
    <string name="address">Street Address</string>
    <string name="citystate">City, State</string>
    <string name="zip">Zip Code</string>
    <string name="submit">Submit</string>
    <string name="title_activity_existing_user_main_screen">ExistingUserMainScreen</string>
    <string name="place_order">Place Order</string>
    <string name="view_history">View Order History</string>
    <string name="title_activity_place_order">PlaceOrderActivity</string>
    <string name="title_activity_view_history">ViewHistoryActivity</string>
    <string name="coupons">Coupons</string>
    <string name="daily_special">Daily Special</string>
    <string name="menu">Menu</string>
    <string name="delivery">Delivery</string>
    <string name="title_activity_receipt">ReceiptActivity</string>
    <string name="title_activity_view_order_history">ViewOrderHistory</string>
    <string name="points">User points</string>

</resources>